starting to update readme