@@ -7,12 +7,19 @@ Meaning that dependencies exist on several, distributed, servers.
 
 To run the sample you will need:
  - Internet Connection (At least the first time it is run)
+ - [Docker 17.09.0](https://www.docker.com/) 
+ - [Docker-Compose 1.12.0](https://docs.docker.com/compose/install/)
+ - About 3 gb of free ram
+
+![Docker](https://www.docker.com/sites/default/files/Whale%20Logo332_5.png)
+ 
+For those who do not want easy mode, please have these on your box.
  - [Java 8 runtime](http://blog.acari.io/jvm/2017/05/05/Gradle-Install.html)
  - [Gradle 2.3+ ](http://blog.acari.io/jvm/2017/05/05/Gradle-Install.html)
  - [RabbitMQ](https://www.rabbitmq.com/download.html), alternatively through a [Docker Image](https://hub.docker.com/_/rabbitmq/) running on port 5672
- - A whole lot of memory, 8gb or more.
+ - Whole lot of ram like 8gb, or you could run every jar with java options of `-Xmx512M -XX:MaxPermSize=384M`
  
-For a more smaller, less memory intensive, example please visit [https://github.com/cyclic-reference/simple-zipkin](https://github.com/cyclic-reference/simple-zipkin)
+For a more smaller, less memory intensive, and less cool example please visit [https://github.com/cyclic-reference/simple-zipkin](https://github.com/cyclic-reference/simple-zipkin)
 
 The following code base contains seven runnable web application servers.
 
@@ -23,7 +30,7 @@ Which should come to no surprise, contains a Spring Zipkin Stream Server.
 Allowing other applications running Spring Cloud Sleuth Stream, to send its Span information to this server.
 Provided correct configurations and an available RabbitMQ server.
 The Zipkin server will run on a different port than the well known default port.
-In this repository, the server will be running on port 10006.
+In this repository, the server will be running on port 80 but will be mapped to the host port of 7865.
 
 #### Eureka
 
@@ -36,7 +43,7 @@ Both of the services can register themselves on a Eureka cluster.
 So when a client comes along and wants to use an instance of Alpha Service, then all it has to do is go to the Eureka cluster.
 Eurka will provide the client with an Alpha Service, provided at least one or more Alpha service is registered.
 Allowing Alpha Services to come and go as they please, without having the clients having to know about it.
-In this repository, the server will be running on port 10001.
+In this repository, the server will be running on port 80 but will be mapped to the host port of 10001.
 
 #### Alpha Client
 
@@ -46,7 +53,7 @@ It should probably be obvious that this will be consuming a Alpha Service (which
 The application exposes a HTTP GET REST api on port 10010.
 This is the following resource:
 
-    http://localhost:10010/get/message
+    http://localhost:10000/get/message
     
 This application and all of servers yet to be mention have the following dependencies:
 
@@ -59,19 +66,19 @@ This application and all of servers yet to be mention have the following depende
 
 As promised, the Alpha Service is located in the "alpha-service" directory.
 Alpha service has a dependency on both Bravo and Charlie Service.
-It exposed an HTTP GET REST api on port 10002.
+It exposed an HTTP GET REST, which will be available to any containers running in its network.
 This is the following resource:
     
-    http://localhost:10002/alpha
+    http://alpha-service/alpha
 
 #### Bravo Service
 
 Next, is the Bravo Service is located in the "bravo-service" directory (starting to see a pattern?).
 Bravo service has no dependencies on any other services.
-It exposed an HTTP GET REST api on port 10003.
+It exposed an HTTP GET REST, which will be available to any containers running in its network.
 This is the following resource:
     
-    http://localhost:10003/bravo
+    http://bravo-service/bravo
 
 #### Charlie Service
 
@@ -80,26 +87,27 @@ Charlie Service has a dependency on Zulu Service.
 It exposed an HTTP GET REST api on port 10004.
 This is the following resource:
     
-    http://localhost:10004/charlie
+    http://charlie-service/charlie
 
 #### Zulu Service
 
 Lastly we end with Zulu Service, which is-wait for it-in the "zulu-service" directory.
 _Big surprise!!_
 Much like Bravo Service, it has no external dependencies.
-Exposing an HTTP GET REST api on port 10005 (I made these first, see the pattern in the ports?).
+It exposed an HTTP GET REST, which will be available to any containers running in its network.
 This is the following resource:
     
-    http://localhost:10005/zulu
+    http://zulu-service/zulu
 
 #### Running the Cluster
 
-To run any server in this repository just do the following.
-1. Open a command line with the server you want to start as the present working directory.
-1. Run 'gradle bootRun'.
+To the entire project:
+1. Open a command line with the root of this repository as the present working directory.
+1. Run `docker-compose up -d`
 
-I would recommend starting the servers in the following order.
+This will start the following containers
 
+1. RabbitMQ
 1. Zipkin
 1. Eureka
 1. Alpha Client
@@ -108,14 +116,16 @@ I would recommend starting the servers in the following order.
 1. Charlie Service
 1. Zulu Service
 
-Once all of the servers are running, and if you have enough memory left to start a web browser.
+Once all of the servers are running, start a web browser.
 Put the following in your address bar and run: 
 
-    http://localhost:10010/get/message
+    http://localhost:10000/
+    
+You should now see the simple user interface for the Alpha Client.
     
 Alternatively you could run this curl command:
 
-    curl localhost:100010/get/message
+    curl -i localhost:10000/get/message
     
 You might get a 500 error once or twice.
 This is [Hystrix](https://github.com/Netflix/Hystrix) in action, timing out the Feign client request.
@@ -128,7 +138,7 @@ It may take a couple tries so
 
 This should output something like this to the browser window/command line
     
->Hello from Alpha Service @ 2017-05-21T19:14:38.269Z and Hello from Bravo Service @ 2017-05-21T19:14:38.245Z and Hello from Charlie Service @ 2017-05-21T19:14:38.266Z and Hello from Zulu Service @ 2017-05-21T19:14:38.251Z
+![ui](images/up.png)
 
 You should now be able to access the Zipkin UI, and have at least one trace, in a browser window as well at `http://localhost:7865/`
 
